k8s/apps/bbox/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bbox-oauth2-proxy
  namespace: bbox
spec:
  forwardAuth:
    address: http://bbox-oauth2-proxy-service.bbox.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bbox-oauth2-errors
  namespace: bbox
spec:
  errors:
    status:
      - "401"
    service:
      name: bbox-oauth2-proxy-service
      port: 4180
    query: /oauth2/sign_in?rd={url}
