k8s/apps/bbox/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbox-proxy
  namespace: bbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbox-proxy
  template:
    metadata:
      labels:
        app: bbox-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        resources:
          requests:
            memory: 8Mi
            cpu: 5m
          limits:
            memory: 32Mi
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config
        configMap:
          name: bbox-proxy-config
