k8s/apps/bbox/oauth2-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bbox-oauth2-proxy-service
  namespace: bbox
spec:
  selector:
    app: bbox-oauth2-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
