k8s/apps/bbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbox
  namespace: bbox
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: bbox
  namespace: bbox
subsets:
  - addresses:
      - ip: 192.168.1.254
    ports:
      - port: 80
        protocol: TCP
