k8s/apps/bbox/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bbox-ingress
  namespace: bbox
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bbox.armleth.fr`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
    - match: Host(`bbox.armleth.fr`)
      kind: Rule
      priority: 10
      services:
        - name: bbox-proxy-service
          port: 80
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: bbox-tls-secret
